.metadata/.plugins/org.eclipse.cdt.ui/F446RE_VITERBI.build.log
04:08:50 **** Incremental Build of configuration Debug for project F446RE_VITERBI ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/viterbi.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/viterbi.d" -MT"Core/Src/viterbi.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/viterbi.o"
../Core/Src/viterbi.c: In function 'viterbi_path':
../Core/Src/viterbi.c:62:20: error: invalid initializer
   62 |  double vprob[1] = vprob[0] + n;
      |                    ^~~~~
../Core/Src/viterbi.c:63:21: error: incompatible types when initializing type 'double *' using type 'double'
   63 |  double* ptr[2] = { vprob[1] + n, vprob[1] + 2 * n };
      |                     ^~~~~
../Core/Src/viterbi.c:63:35: error: incompatible types when initializing type 'double *' using type 'double'
   63 |  double* ptr[2] = { vprob[1] + n, vprob[1] + 2 * n };
      |                                   ^~~~~
../Core/Src/viterbi.c:67:10: error: subscripted value is neither array nor pointer nor vector
   67 |  vprob[0][0] = 1;
      |          ^
../Core/Src/viterbi.c:68:10: error: subscripted value is neither array nor pointer nor vector
   68 |  vprob[1][0] = 0;
      |          ^
../Core/Src/viterbi.c:75:27: error: subscripted value is neither array nor pointer nor vector
   75 |    double row0 = (vprob[0][i - 1] + A[0][j]);
      |                           ^
../Core/Src/viterbi.c:76:27: error: subscripted value is neither array nor pointer nor vector
   76 |    double row1 = (vprob[1][i - 1] + A[1][j]);
      |                           ^
../Core/Src/viterbi.c:78:12: error: subscripted value is neither array nor pointer nor vector
   78 |    vprob[j][i] = B[seq[i]][j] + max( row0, row1 );
      |            ^
../Core/Src/viterbi.c:78:23: warning: array subscript has type 'char' [-Wchar-subscripts]
   78 |    vprob[j][i] = B[seq[i]][j] + max( row0, row1 );
      |                    ~~~^~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:100:15: error: too few arguments to function 'viterbi_path'
  100 |   int* path = viterbi_path(seq, n);
      |               ^~~~~~~~~~~~
In file included from ../Core/Src/main.c:25:
../Core/Inc/viterbi.h:74:6: note: declared here
   74 | int* viterbi_path(const char seq[], int n, int m_t, double A[][m_t], int m_e, double B[][m_e]);
      |      ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:37: Core/Src/viterbi.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

04:08:50 Build Failed. 12 errors, 1 warnings. (took 216ms)

